# statsToolkit

./: .gitignore  LICENSE  MANIFEST.in  README.md  ex_prob.py  ex_stat.py  pyproject.toml  setup.py
MA660E/: probability.py  utils.py
statstoolkit/: __init__.py  descriptive_statistics.py  probability.py  statistics.py  utils.py  visualization.py
statstoolkit/tests/: anova_tests.py  d_stat_tests.py  kruskalwallis_tests.py  probability_tests.py  regress_visual_test.py  statistics_tests.py  std_tests.py  utils_tests.py  vis_tests.py  visualization_tests.py
